--- a/css/style.css
+++ b/css/style.css
@@ -20,4 +20,281 @@ body {
   font-style: italic;
   margin: 0;
   padding: 0;
+}
+
+/*menu*/
+.menu__checkbox {
+  position: absolute;
+  left: -9999px;
+}
+.menu__checkbox:checked ~ .menu__tabs {
+  display: block;
+}
+
+.menu__toggler {
+  cursor: pointer;
+}
+
+.menu__tabs {
+  display: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #4A8E16;
+  text-transform: uppercase;
+}
+
+.menu__list {
+  border-bottom: 1px solid #FFF4E5;
+}
+
+.menu__item {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: white;
+}
+.menu__item:hover, .menu__item:hover {
+  background-color: #214C01;
+}
+
+.logo {
+  display: none;
+}
+
+@media screen and (min-width: 800px) {
+  .site-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50px;
+  }
+
+  .logo {
+    display: block;
+  }
+
+  .menu__toggler {
+    display: none;
+  }
+
+  .menu__tabs {
+    background-color: white;
+    display: flex !important;
+    gap: 15px;
+  }
+
+  .menu__list {
+    background-color: #4A8E16;
+    border-bottom: 0;
+    text-align: center;
+    width: 135px;
+    padding: 5px 15px;
+    border-radius: 20px;
+  }
+  .menu__list:hover, .menu__list:active {
+    background-color: #214C01;
+  }
+
+  .menu__item {
+    padding: 0;
+  }
+}
+/*banner*/
+.banner {
+  display: none;
+}
+@media screen and (min-width: 800px) {
+  .banner {
+    display: block;
+    background-image: url("/Images/banner.jpg");
+    background-size: cover;
+    margin-bottom: 70px;
+    height: 260px;
+  }
+}
+.banner__title--big {
+  position: relative;
+  top: 120px;
+  left: -10%;
+  color: white;
+  font-size: 46px;
+  text-align: right;
+}
+
+/*layout*/
+.box-hours {
+  color: white;
+  background-color: #4A8E16;
+  padding: 20px;
+}
+
+.box-hours__title--small {
+  font-size: 28px;
+  text-align: center;
+}
+
+.box-actualities {
+  background-color: #F19838;
+  padding: 20px;
+  margin-bottom: 70px;
+}
+
+.box-actualities__title--small {
+  font-size: 28px;
+  text-align: center;
+}
+
+.main-information__content {
+  border: 5px solid #FFF4E5;
+  padding: 0 20px;
+  margin-bottom: 70px;
+}
+
+.main-information__title--medium {
+  color: #214C01;
+  font-size: 34px;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 40px;
+}
+
+.logo-small {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 70px;
+  margin-top: 30px;
+}
+.logo-small__logo {
+  max-width: 150px;
+  margin-right: 40px;
+}
+
+.Outside-photo__shop {
+  max-width: 100%;
+  margin-bottom: 70px;
+}
+
+.allergens-icons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 70px;
+}
+
+.allergens-icons__item {
+  max-width: 100%;
+  border: 2px solid #F19838;
+  border-radius: 50%;
+}
+
+.brands {
+  margin-bottom: 70px;
+  padding: 0 20px;
+}
+.brands ::before {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: #214C01;
+  margin-bottom: 70px;
+}
+
+.section-logos {
+  display: none;
+}
+
+/*bottom section and footer*/
+.options {
+  background-color: #4A8E16;
+  color: white;
+  padding: 20px;
+}
+
+.grid {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.footer {
+  background-color: #214C01;
+  color: #120e0e;
+  text-align: center;
+  margin: 0;
+  padding: 10px;
+}
+
+/*Grid layout content*/
+@media screen and (min-width: 800px) {
+  .site-layout {
+    display: grid;
+    grid-template-columns: 100px 180px 180px repeat(3, 1fr) 200px;
+    grid-template-rows: 260px auto;
+  }
+
+  .banner {
+    grid-column: 1/8;
+    grid-row: 1/2;
+  }
+
+  .main-information {
+    grid-column: 3/7;
+    grid-row: 2/3;
+    border: 5px solid #FFF4E5;
+    padding: 20px 20px 20px 0;
+    margin-bottom: 70px;
+    margin-top: 70px;
+  }
+
+  .main-information__content {
+    grid-column: 4/7;
+    grid-row: 2/3;
+    border: none;
+    margin-top: 70px;
+  }
+
+  .box-hours {
+    background-color: #4A8E16;
+    position: relative;
+    left: -115px;
+    width: 240px;
+  }
+
+  .box-actualities {
+    position: relative;
+    left: -115px;
+    bottom: -30px;
+    width: 240px;
+  }
+
+  .Outside-photo {
+    grid-column: 1/8;
+    justify-self: center;
+  }
+
+  .Outside-photo__shop {
+    padding: 0 60px;
+    width: 100%;
+  }
+
+  .allergens-icons {
+    grid-column: 3/7;
+  }
+
+  .allergens-icons__item {
+    width: 120px;
+    height: 120px;
+    border: 2px solid #F19838;
+  }
+
+  .brands {
+    grid-column: 3/7;
+    padding: 0;
+  }
+
+  .section-logos {
+    display: block;
+    grid-column: 3/7;
+    margin-bottom: 70px;
+  }
 }/*# sourceMappingURL=style.css.map */
