--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-/*pc version - min 800px
-  mobile version - max 799px*/
+/*pc version - min 1000px
+  mobile version - max 999px*/
 html {
   box-sizing: border-box;
 }
@@ -23,6 +23,21 @@ body {
 }
 
 /*menu*/
+/*@media screen and (max-width: 999px) {
+    .menu {
+        display:flex;
+        justify-content: space-between;
+        height: 50px;
+        padding: 15px;
+        border: 2px solid $c-primary;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .menu__mobile-logo {
+        display: none;
+    }
+}*/
 .menu__checkbox {
   position: absolute;
   left: -9999px;
@@ -62,7 +77,7 @@ body {
   display: none;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .site-header {
     display: flex;
     justify-content: space-between;
@@ -103,12 +118,14 @@ body {
 .banner {
   display: none;
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .banner {
     display: block;
     background-image: url("/Images/banner.jpg");
     background-size: cover;
     margin-bottom: 70px;
+    grid-column: 1/8;
+    grid-row: 1/2;
     height: 260px;
   }
 }
@@ -127,10 +144,17 @@ body {
   background-color: #4A8E16;
   padding: 20px;
 }
-
 .box-hours__title--small {
   font-size: 28px;
   text-align: center;
+}
+@media screen and (min-width: 1000px) {
+  .box-hours {
+    background-color: #4A8E16;
+    position: relative;
+    left: -115px;
+    width: 240px;
+  }
 }
 
 .box-actualities {
@@ -138,18 +162,24 @@ body {
   padding: 20px;
   margin-bottom: 70px;
 }
-
 .box-actualities__title--small {
   font-size: 28px;
   text-align: center;
 }
+@media screen and (min-width: 1000px) {
+  .box-actualities {
+    position: relative;
+    left: -115px;
+    bottom: -30px;
+    width: 240px;
+  }
+}
 
-.main-information__content {
+.main-information {
   border: 5px solid #FFF4E5;
   padding: 0 20px;
   margin-bottom: 70px;
 }
-
 .main-information__title--medium {
   color: #214C01;
   font-size: 34px;
@@ -157,12 +187,21 @@ body {
   margin-bottom: 30px;
   margin-top: 40px;
 }
+@media screen and (min-width: 1000px) {
+  .main-information {
+    grid-column: 4/7;
+    grid-row: 2/3;
+    border: none;
+    margin-top: 70px;
+  }
+}
 
 .logo-small {
   display: flex;
   justify-content: center;
   margin-bottom: 70px;
   margin-top: 30px;
+  padding-left: 15px;
 }
 .logo-small__logo {
   max-width: 150px;
@@ -225,46 +264,20 @@ body {
 }
 
 /*Grid layout content*/
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .site-layout {
     display: grid;
     grid-template-columns: 100px 180px 180px repeat(3, 1fr) 200px;
     grid-template-rows: 260px auto;
   }
 
-  .banner {
-    grid-column: 1/8;
-    grid-row: 1/2;
-  }
-
-  .main-information {
+  .container {
     grid-column: 3/7;
     grid-row: 2/3;
     border: 5px solid #FFF4E5;
     padding: 20px 20px 20px 0;
     margin-bottom: 70px;
     margin-top: 70px;
-  }
-
-  .main-information__content {
-    grid-column: 4/7;
-    grid-row: 2/3;
-    border: none;
-    margin-top: 70px;
-  }
-
-  .box-hours {
-    background-color: #4A8E16;
-    position: relative;
-    left: -115px;
-    width: 240px;
-  }
-
-  .box-actualities {
-    position: relative;
-    left: -115px;
-    bottom: -30px;
-    width: 240px;
   }
 
   .Outside-photo {
