--- a/_includes/second-template.njk
+++ b/_includes/second-template.njk
@@ -15,18 +15,14 @@
     
     <!--Header with navigation-->
     <header class="site-header">
-
-        <img class="logo" src="" alt="logo Evita">
-
+        <a href="/">
+            <img class="logo" src="/Icons/e-vita_logo.png" alt="logo Evita">
+        </a>
+        
         <nav class="menu">
-           <!-- 
-               <div class="menu__mobile-logo"> 
-                Logo 
-            </div>
-            -->
             <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
 
-            <label for="menu-checkbox" class="menu__toggler">&#x2630;</label>
+            <label for="menu-checkbox" class="menu__toggler"><img class="hamburger-menu" src="/Icons/menu-icon.png" alt="ikona menu"></label>
 
             <ul class="menu__tabs">
                 <li class="menu__list"><a class="menu__item" href="/">O nás</a></li>
