--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/*pc version - min 1000px
-  mobile version - max 999px*/
 html {
   box-sizing: border-box;
 }
@@ -22,22 +20,6 @@ body {
   padding: 0;
 }
 
-/*menu*/
-/*@media screen and (max-width: 999px) {
-    .menu {
-        display:flex;
-        justify-content: space-between;
-        height: 50px;
-        padding: 15px;
-        border: 2px solid $c-primary;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .menu__mobile-logo {
-        display: none;
-    }
-}*/
 .menu__checkbox {
   position: absolute;
   left: -9999px;
@@ -69,23 +51,39 @@ body {
   text-decoration: none;
   color: white;
 }
-.menu__item:hover, .menu__item:hover {
+.menu__item:hover {
   background-color: #214C01;
 }
 
+.site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: 2px solid #4A8E16;
+}
+
+.hamburger-menu {
+  width: 100%;
+}
+
 .logo {
-  display: none;
+  order: 1;
+  max-width: 120px;
+  width: 100%;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 @media screen and (min-width: 1000px) {
   .site-header {
-    display: flex;
-    justify-content: space-between;
+    border: 0;
+    align-items: flex-end;
     padding: 30px 50px;
   }
 
   .logo {
     display: block;
+    max-width: 200px;
   }
 
   .menu__toggler {
@@ -106,7 +104,7 @@ body {
     padding: 5px 15px;
     border-radius: 20px;
   }
-  .menu__list:hover, .menu__list:active {
+  .menu__list:hover {
     background-color: #214C01;
   }
 
@@ -114,7 +112,27 @@ body {
     padding: 0;
   }
 }
-/*banner*/
+/*bottom section and footer*/
+.options {
+  background-color: #4A8E16;
+  color: white;
+  padding: 20px;
+}
+
+.grid {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.footer {
+  background-color: #214C01;
+  color: #120e0e;
+  text-align: center;
+  margin: 0;
+  padding: 10px;
+}
+
 .banner {
   display: none;
 }
@@ -131,13 +149,31 @@ body {
 }
 .banner__title--big {
   position: relative;
-  top: 120px;
+  top: 132px;
   left: -10%;
   color: white;
   font-size: 46px;
   text-align: right;
 }
 
+/*pc version - min 1000px
+  mobile version - max 999px*/
+/*menu*/
+/*@media screen and (max-width: 999px) {
+    .menu {
+        display:flex;
+        justify-content: space-between;
+        height: 50px;
+        padding: 15px;
+        border: 2px solid $c-primary;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .menu__mobile-logo {
+        display: none;
+    }
+}*/
 /*layout*/
 .box-hours {
   color: white;
@@ -145,7 +181,7 @@ body {
   padding: 20px;
 }
 .box-hours__title--small {
-  font-size: 28px;
+  font-size: 24px;
   text-align: center;
 }
 @media screen and (min-width: 1000px) {
@@ -154,6 +190,7 @@ body {
     position: relative;
     left: -115px;
     width: 240px;
+    border-radius: 3px;
   }
 }
 
@@ -163,7 +200,7 @@ body {
   margin-bottom: 70px;
 }
 .box-actualities__title--small {
-  font-size: 28px;
+  font-size: 24px;
   text-align: center;
 }
 @media screen and (min-width: 1000px) {
@@ -172,6 +209,7 @@ body {
     left: -115px;
     bottom: -30px;
     width: 240px;
+    border-radius: 3px;
   }
 }
 
@@ -182,7 +220,7 @@ body {
 }
 .main-information__title--medium {
   color: #214C01;
-  font-size: 34px;
+  font-size: 38px;
   text-align: center;
   margin-bottom: 30px;
   margin-top: 40px;
@@ -201,11 +239,10 @@ body {
   justify-content: center;
   margin-bottom: 70px;
   margin-top: 30px;
-  padding-left: 15px;
+  gap: 20px;
 }
 .logo-small__logo {
-  max-width: 150px;
-  margin-right: 40px;
+  width: 100%;
 }
 
 .Outside-photo__shop {
@@ -242,27 +279,6 @@ body {
   display: none;
 }
 
-/*bottom section and footer*/
-.options {
-  background-color: #4A8E16;
-  color: white;
-  padding: 20px;
-}
-
-.grid {
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-}
-
-.footer {
-  background-color: #214C01;
-  color: #120e0e;
-  text-align: center;
-  margin: 0;
-  padding: 10px;
-}
-
 /*Grid layout content*/
 @media screen and (min-width: 1000px) {
   .site-layout {
@@ -295,8 +311,8 @@ body {
   }
 
   .allergens-icons__item {
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
     border: 2px solid #F19838;
   }
 
@@ -309,5 +325,81 @@ body {
     display: block;
     grid-column: 3/7;
     margin-bottom: 70px;
+  }
+}
+/* PPL site and Zasilkovna site*/
+.postal-service {
+  margin: 0 20px;
+}
+@media screen and (min-width: 1000px) {
+  .postal-service {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+}
+.postal-service__content {
+  margin-bottom: 70px;
+}
+@media screen and (min-width: 1000px) {
+  .postal-service__content {
+    flex-basis: 40%;
+  }
+}
+.postal-service__title--medium {
+  color: #214C01;
+  font-size: 38px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+.postal-service__photo {
+  max-width: 465px;
+  margin-bottom: 70px;
+}
+.postal-service__photo--big {
+  width: 100%;
+}
+
+.service-form {
+  display: block;
+  max-width: 200px;
+  margin-left: 20px;
+}
+.service-form__input {
+  border: 1px solid #777777;
+  border-radius: 2px;
+  padding: 5px;
+}
+.service-form__input:focus {
+  outline: 0;
+  border: 2px solid #F19838;
+}
+@media screen and (min-width: 1000px) {
+  .service-form {
+    margin: 0 auto;
+  }
+}
+
+/*button*/
+.input-button {
+  cursor: pointer;
+  display: block;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #F19838;
+  padding: 10px 15px;
+  border: 1px solid #F19838;
+  border-radius: 20px;
+  margin-bottom: 70px;
+  margin-top: 30px;
+}
+.input-button:hover, .input-button:focus {
+  color: white;
+  background-color: #F36900;
+}
+@media screen and (min-width: 1000px) {
+  .input-button {
+    margin-left: 5px;
   }
 }/*# sourceMappingURL=style.css.map */
