--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -1,5 +1,5 @@
-@use 'styles';
-@use 'basic';
+@use "../base/styles";
+@use "../base/basic";
 
 
 .menu__checkbox {
@@ -34,26 +34,41 @@
     text-decoration: none;
     color: white;
    
-    &:hover,
     &:hover {
         background-color: styles.$c-secondary;
     }
     
 }
 
-.logo {
-    display: none;
+
+.site-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 2px solid styles.$c-primary;
 }
 
+.hamburger-menu {
+    width: 100%;
+}
+
+.logo {
+    order: 1;
+    max-width: 120px;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 10px;
+}
 @media screen and (min-width: 1000px) {
     .site-header {
-        display: flex;
-        justify-content: space-between;
+        border: 0;
+        align-items: flex-end;
         padding: 30px 50px;
     }
     
     .logo {
         display: block;
+        max-width:200px;
     }
     
     .menu__toggler {
@@ -74,14 +89,12 @@
         padding: 5px 15px;
         border-radius: 20px;
 
-        &:hover,
-        &:active {
+        &:hover {
             background-color: styles.$c-secondary;
         }
     }
 
     .menu__item {
         padding: 0;
-
     }
 }
