--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -20,8 +20,8 @@
         top: 132px;
         left: -10%;
         color: white;
-        font-size: 46px;
+        font-size: 64px;
         text-align: right;
-
+        text-shadow: 2px 2px 4px #2c2a2a;
     }
 }
