--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-family: "Nunito", sans-serif;
+  color: #120e0e;
   margin: 0;
 }
 
@@ -152,8 +153,9 @@ body {
   top: 132px;
   left: -10%;
   color: white;
-  font-size: 46px;
+  font-size: 64px;
   text-align: right;
+  text-shadow: 2px 2px 4px #2c2a2a;
 }
 
 /*pc version - min 1000px
@@ -259,7 +261,7 @@ body {
 
 .allergens-icons__item {
   max-width: 100%;
-  border: 2px solid #F19838;
+  border: 1px solid #F19838;
   border-radius: 50%;
 }
 
@@ -344,7 +346,7 @@ body {
 }
 @media screen and (min-width: 1000px) {
   .postal-service__content {
-    flex-basis: 40%;
+    flex-basis: 30%;
   }
 }
 .postal-service__title--medium {
@@ -402,4 +404,46 @@ body {
   .input-button {
     margin-left: 5px;
   }
+}
+
+/*contact site with map*/
+.main-information__contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  padding: 40px 0 40px 0;
+}
+
+.main-information__title-contact--medium {
+  margin-bottom: 15px;
+  color: #214C01;
+  font-size: 38px;
+}
+
+.main-information__contact-icons {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.contact-phone {
+  text-decoration: none;
+  color: #120e0e;
+}
+
+.main-information__contact-address {
+  margin: 0;
+}
+
+.contact-logo {
+  height: 45px;
+}
+
+.google-map {
+  grid-column: 1/8;
+  height: 300px;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
