--- a/scss/base/_basic.scss
+++ b/scss/base/_basic.scss
@@ -8,6 +8,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     font-family: styles.$font-base;
+    color: styles.$c-content;
     margin: 0;
 }
 
