--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,7 +119,7 @@
 
 .allergens-icons__item {
     max-width: 100%;
-    border: 2px solid styles.$c-special;
+    border: 1px solid styles.$c-special;
     border-radius: 50%; 
 }
 
@@ -130,7 +130,7 @@
     ::before {
         content: "";
         display: block;
-        height: 2px;;
+        height: 2px;
         background-color: styles.$c-secondary;
         margin-bottom: styles.$spacer-bottom;
     }
@@ -210,7 +210,7 @@
         margin-bottom: styles.$spacer-bottom;
 
         @media screen and (min-width: 1000px) {
-            flex-basis: 40%;
+            flex-basis: 30%;
             
         }
 
@@ -256,7 +256,7 @@
     }
 
     @media screen and (min-width:1000px) {
-        margin: 0 auto;
+        margin:0 auto;
     }
    
 }
@@ -289,6 +289,46 @@
     }
 }
 
+/*contact site with map*/
+.main-information__contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap:40px;
+    padding: 40px 0 40px 0;
+}
 
+.main-information__title-contact--medium {
+    margin-bottom: 15px;
+    color: styles.$c-secondary;
+    font-size: 38px;
+}
 
+.main-information__contact-icons {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.contact-phone {
+    text-decoration: none;
+    color: styles.$c-content;
+    
+}
+
+.main-information__contact-address {
+    margin: 0;
+}
+
+.contact-logo {
+    height: 45px;
+}
+
+.google-map {
+    grid-column: 1 / 8;
+    height: 300px;
+    width: 100%;
+}
 
