--- a/_includes/actualities-box.njk
+++ b/_includes/actualities-box.njk
@@ -1,4 +1,4 @@
 <div class="box-actualities">
     <h3 class="title box-actualities__title--small">Aktuality</h3>
-    <p class="box-actualities__content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur est earum ea accusantium pariatur non</p>
+    <p class="box-actualities__content">Informace ohledně mimořádného uzavření prodejny nebo změn týkajících se otevírací doby</p>
 </div>
