--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -22,6 +22,6 @@
         color: white;
         font-size: 64px;
         text-align: right;
-        text-shadow: 2px 2px 4px #2c2a2a;
+        text-shadow: 0px 2px 2px #464545;
     }
 }
