--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,6 @@ body {
   padding: 0;
 }
 
-/*.site-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-
-}*/
 .site-header {
   border: 2px solid #4A8E16;
 }
@@ -205,7 +199,7 @@ body {
     left: -115px;
     bottom: -30px;
     width: 240px;
-    border-radius: 0 0 10% 20%;
+    border-radius: 0 0 20px 20px;
   }
 }
 
@@ -400,7 +394,7 @@ body {
 }
 @media screen and (min-width: 1000px) {
   .input-button {
-    margin-left: 10px;
+    margin-left: 5px;
   }
 }
 
