--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@
         left: -115px;
         bottom: -30px;
         width: 240px;
-        border-radius: 0 0 10% 20%;
+        border-radius: 0 0 20px 20px;
     }
 
 }
@@ -265,7 +265,7 @@
     }
 
     @media screen and (min-width:1000px) {
-        margin-left: 10px;
+        margin-left: 5px;
         
     }
 }
