done without text

--- a/_includes/main-template.njk
+++ b/_includes/main-template.njk
@@ -49,7 +49,11 @@
 
         {% include 'hours-box.njk' %}
 
-        {% include 'actualities-box.njk' %}
+       
+
+        <div class="box-actualities"> 
+             <p class="box-actualities__content"> Novinky a informace týkající se změn otevírací doby. </p>
+        </div>
 
         </aside> 
     </section>
