--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,38 @@ body {
   text-shadow: 0px 2px 2px #464545;
 }
 
+/*Grid layout content*/
+@media screen and (min-width: 1000px) {
+  .site-layout {
+    display: grid;
+    grid-template-columns: 100px 180px 180px repeat(3, 1fr) 200px;
+    grid-template-rows: 260px auto;
+  }
+
+  .container {
+    grid-column: 3/7;
+    grid-row: 2/3;
+    border: 5px solid #FFF4E5;
+    padding: 20px 20px 20px 0;
+    margin-bottom: 70px;
+    margin-top: 70px;
+  }
+
+  .Outside-photo {
+    grid-column: 1/8;
+    justify-self: center;
+  }
+  .Outside-photo__shop {
+    padding: 0 60px;
+    width: 100%;
+  }
+
+  .section-logos {
+    display: block;
+    grid-column: 3/7;
+    margin-bottom: 70px;
+  }
+}
 /*layout box with actualities and opening hours*/
 .box-hours {
   color: white;
@@ -185,6 +217,7 @@ body {
 
 .box-actualities {
   background-color: #F19838;
+  color: white;
   text-align: center;
   padding: 20px;
   margin-bottom: 70px;
@@ -227,6 +260,7 @@ body {
 .logo-small {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 70px;
   margin-top: 30px;
   gap: 20px;
@@ -235,6 +269,7 @@ body {
   width: 100%;
 }
 
+/*section with photo and icons*/
 .Outside-photo__shop {
   max-width: 100%;
   margin-bottom: 70px;
@@ -246,11 +281,25 @@ body {
   gap: 30px;
   margin-bottom: 70px;
 }
+@media screen and (min-width: 1000px) {
+  .allergens-icons {
+    grid-column: 1/8;
+    justify-content: center;
+    gap: 50px;
+  }
+}
 
 .allergens-icons__item {
   max-width: 100%;
   border: 1px solid #F19838;
   border-radius: 50%;
+}
+@media screen and (min-width: 1000px) {
+  .allergens-icons__item {
+    width: 90px;
+    height: 90px;
+    border: 2px solid #F19838;
+  }
 }
 
 .brands {
@@ -264,59 +313,17 @@ body {
   background-color: #214C01;
   margin-bottom: 70px;
 }
+@media screen and (min-width: 1000px) {
+  .brands {
+    grid-column: 3/7;
+    padding: 0;
+  }
+}
 
 .section-logos {
   display: none;
 }
 
-/*Grid layout content*/
-@media screen and (min-width: 1000px) {
-  .site-layout {
-    display: grid;
-    grid-template-columns: 100px 180px 180px repeat(3, 1fr) 200px;
-    grid-template-rows: 260px auto;
-  }
-
-  .container {
-    grid-column: 3/7;
-    grid-row: 2/3;
-    border: 5px solid #FFF4E5;
-    padding: 20px 20px 20px 0;
-    margin-bottom: 70px;
-    margin-top: 70px;
-  }
-
-  .Outside-photo {
-    grid-column: 1/8;
-    justify-self: center;
-  }
-
-  .Outside-photo__shop {
-    padding: 0 60px;
-    width: 100%;
-  }
-
-  .allergens-icons {
-    grid-column: 3/7;
-  }
-
-  .allergens-icons__item {
-    width: 90px;
-    height: 90px;
-    border: 2px solid #F19838;
-  }
-
-  .brands {
-    grid-column: 3/7;
-    padding: 0;
-  }
-
-  .section-logos {
-    display: block;
-    grid-column: 3/7;
-    margin-bottom: 70px;
-  }
-}
 /* PPL page and Zasilkovna page*/
 .postal-service {
   margin: 0 20px;
